--- a/.github/workflows/ip-tester.yml
+++ b/.github/workflows/ip-tester.yml
@@ -36,12 +36,26 @@ on:
         default: '1.00'
       test_url:
         description: '测速文件URL'
-        default: 'https://example.com/100mb.bin'
+        default: 'https://speed.cloudflare.com/__down?bytes=100000000'
+  
+  # 北京时间早上5点和下午5点自动运行 (UTC时间21:00和09:00)
+  schedule:
+    - cron: '0 21 * * *'  # 北京时间05:00 (UTC+8)
+    - cron: '0 9 * * *'   # 北京时间17:00 (UTC+8)
 
 jobs:
   run-test:
     runs-on: ubuntu-latest
+    env:
+      TZ: Asia/Shanghai
+    
     steps:
+    - name: 设置时区
+      run: sudo timedatectl set-timezone $TZ
+      
+    - name: 显示当前时间
+      run: date
+      
     - name: 检出代码
       uses: actions/checkout@v4
       
@@ -53,18 +67,56 @@ jobs:
       
     - name: 运行测试
       run: |
+        # 设置默认值（用于定时触发）
+        TEST_MODE=${INPUTS_TEST_MODE:-1}
+        TEST_TYPE=${INPUTS_TEST_TYPE:-TCP}
+        PORT=${INPUTS_PORT:-443}
+        MIN_DELAY=${INPUTS_MIN_DELAY:-40}
+        MAX_DELAY=${INPUTS_MAX_DELAY:-250}
+        MAX_LOSS=${INPUTS_MAX_LOSS:-10}
+        MIN_SPEED=${INPUTS_MIN_SPEED:-1.00}
+        TEST_URL=${INPUTS_TEST_URL:-https://speed.cloudflare.com/__down?bytes=100000000}
+        
+        # 使用工作流输入（手动触发）
+        if [ -n "${{ inputs.test_mode }}" ]; then
+          TEST_MODE="${{ inputs.test_mode }}"
+          TEST_TYPE="${{ inputs.test_type }}"
+          PORT="${{ inputs.port }}"
+          MIN_DELAY="${{ inputs.min_delay }}"
+          MAX_DELAY="${{ inputs.max_delay }}"
+          MAX_LOSS="${{ inputs.max_loss }}"
+          MIN_SPEED="${{ inputs.min_speed }}"
+          TEST_URL="${{ inputs.test_url }}"
+        fi
+        
         ./scripts/run-test.sh \
-          "${{ inputs.test_mode }}" \
-          "${{ inputs.test_type }}" \
-          "${{ inputs.port }}" \
-          "${{ inputs.min_delay }}" \
-          "${{ inputs.max_delay }}" \
-          "${{ inputs.max_loss }}" \
-          "${{ inputs.min_speed }}" \
-          "${{ inputs.test_url }}"
+          "$TEST_MODE" \
+          "$TEST_TYPE" \
+          "$PORT" \
+          "$MIN_DELAY" \
+          "$MAX_DELAY" \
+          "$MAX_LOSS" \
+          "$MIN_SPEED" \
+          "$TEST_URL"
           
     - name: 保存结果
       uses: actions/upload-artifact@v4
       with:
-        name: ip-results
+        name: ip-results-${{ github.run_id }}
         path: results/
+        
+    - name: 上传结果到仓库
+      run: |
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
+        
+        # 创建结果目录
+        mkdir -p ip-results
+        
+        # 复制结果文件
+        cp results/* ip-results/
+        
+        # 提交到仓库
+        git add ip-results/
+        git commit -m "更新IP测试结果 ${{ github.run_id }}"
+        git push
