--- a/.github/workflows/ip-optimizer.yml
+++ b/.github/workflows/ip-optimizer.yml
@@ -1,23 +1,23 @@
 name: IP Optimizer
 on:
-  workflow_dispatch: # 支持手动触发
+  workflow_dispatch:
   schedule:
-    - cron: '0 21 * * *'  # UTC 21:00 = 北京时间 5:00
-    - cron: '0 9 * * *'   # UTC 9:00 = 北京时间 17:00
+    - cron: '0 21 * * *'  # UTC 21:00 = 北京时间5:00
+    - cron: '0 9 * * *'   # UTC 9:00 = 北京时间17:00
 
 jobs:
   optimize:
     runs-on: ubuntu-latest
     env:
-      MODE: TCP               # 可修改：TCP/ICMP
-      PORT: 443               # 可修改端口
-      RTT_RANGE: "40~250"     # 延迟范围(ms)
-      LOSS_MAX: 10            # 最大丢包率(%)
-      DOWNLOAD_MIN: 1.00      # 最低下载速度(MB/s)
-      IP_COUNT: 1000          # 随机生成 IP 数量
-      THREADS: 50             # 线程数
-      SPEED_URL: "https://speed.cloudflare.com/__down?bytes=10000000" # 测速链接
-      CLOUDFLARE_IPS_URL: "https://www.cloudflare.com/ips-v4" # Cloudflare IP 段
+      MODE: TCP
+      PORT: 443
+      RTT_RANGE: "40~250"
+      LOSS_MAX: 10
+      DOWNLOAD_MIN: 1.00
+      THREADS: 50
+      IP_COUNT: 500  # 推荐测试数量
+      SPEED_URL: "https://speed.cloudflare.com/__down?bytes=10000000"
+      CLOUDFLARE_IPS_URL: "www.cloudflare.com/ips-v4"  # 自动添加https
 
     steps:
     - uses: actions/checkout@v4
@@ -28,7 +28,10 @@ jobs:
         python-version: '3.10'
 
     - name: Install dependencies
-      run: pip install requests numpy
+      run: |
+        pip install requests numpy
+        sudo apt-get update
+        sudo apt-get install -y net-tools  # 网络工具支持
 
     - name: Run IP Optimizer
       run: python ip_optimizer.py
@@ -38,5 +41,5 @@ jobs:
         git config user.name "github-actions"
         git config user.email "actions@github.com"
         git add results/
-        git commit -m "Update optimized IPs"
+        git commit -m "Auto: Update optimized IPs"
         git push
