--- a/.github/workflows/ip-optimizer.yml
+++ b/.github/workflows/ip-optimizer.yml
@@ -1,1 +1,49 @@
-ip-optimizer.yml
+name: IP Optimizer
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: '0 21 * * *'  # UTC 21:00 = 北京时间5:00
+    - cron: '0 9 * * *'   # UTC 9:00 = 北京时间17:00
+
+jobs:
+  optimize:
+    runs-on: ubuntu-latest
+    env:
+      MODE: TCP
+      PORT: 443
+      RTT_RANGE: "40~250"
+      LOSS_MAX: 10
+      DOWNLOAD_MIN: 1.00
+      THREADS: 20         # 默认并发数
+      IP_COUNT: 200       # 默认测试IP数量
+      SPEED_TEST: true       #SPEED_TEST=false 禁用测速
+      SPEED_URL: "https://speed.cloudflare.com/__down?bytes=10000000"
+      SPEED_TIMEOUT: 8
+      SPEED_THREADS: 10      SPEED_THREADS=5 降低测速并发数节省资源
+      DOWNLOAD_MIN: 1.0    #DOWNLOAD_MIN=2.5 设置更高速度要求
+      CLOUDFLARE_IPS_URL: "www.cloudflare.com/ips-v4"
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
+    - name: Install dependencies
+      run: |
+        pip install requests numpy tqdm  # 添加tqdm依赖[2,11](@ref)
+        sudo apt-get update
+        sudo apt-get install -y net-tools
+
+    - name: Run IP Optimizer
+      run: python ip_optimizer.py
+
+    - name: Commit results
+      run: |
+        git config user.name "github-actions"
+        git config user.email "actions@github.com"
+        git add results/
+        git commit -m "Auto: Update optimized IPs"
+        git push
