--- a/.github/workflows/ip-optimizer.yml
+++ b/.github/workflows/ip-optimizer.yml
@@ -13,14 +13,13 @@ jobs:
       PORT: 443
       RTT_RANGE: "40~250"
       LOSS_MAX: 10
-      DOWNLOAD_MIN: 1.00
       THREADS: 20         # 默认并发数
       IP_COUNT: 200       # 默认测试IP数量
-      SPEED_TEST: true       # SPEED_TEST=false 禁用测速
+      SPEED_TEST: true    # SPEED_TEST=false 禁用测速
       SPEED_URL: "https://speed.cloudflare.com/__down?bytes=10000000"
       SPEED_TIMEOUT: 3
-      SPEED_THREADS: 20     # SPEED_THREADS=5 降低测速并发数节省资源
-      DOWNLOAD_MIN: 1.0    # DOWNLOAD_MIN=2.5 设置更高速度要求
+      SPEED_THREADS: 20   # SPEED_THREADS=5 降低测速并发数节省资源
+      DOWNLOAD_MIN: 1.0   # 最低下载速度要求(MB/s)
       CLOUDFLARE_IPS_URL: "www.cloudflare.com/ips-v4"
 
     steps:
@@ -33,7 +32,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install requests numpy tqdm  # 添加tqdm依赖[2,11](@ref)
+        pip install requests numpy tqdm
         sudo apt-get update
         sudo apt-get install -y net-tools
 
