--- a/.github/workflows/ip-optimizer.yml
+++ b/.github/workflows/ip-optimizer.yml
@@ -11,11 +11,11 @@ jobs:
     env:
       MODE: TCP
       PORT: 443
-      RTT_RANGE: "40~250"
-      LOSS_MAX: 10
-      DOWNLOAD_MIN: 1.00
-      THREADS: 20         # 默认并发数
-      IP_COUNT: 200       # 默认测试IP数量
+      RTT_RANGE: "10~2000"
+      LOSS_MAX: 30
+      DOWNLOAD_MIN: 0.1    # 最低下载速度要求(MB/s)
+      THREADS: 50         # 默认并发数
+      IP_COUNT: 1000       # 默认测试IP数量
       SPEED_URL: "https://speed.cloudflare.com/__down?bytes=10000000"
       CLOUDFLARE_IPS_URL: "www.cloudflare.com/ips-v4"
 
